Fixed the missing files issue

--- a/src/app/view/home/main/main.component.html
+++ b/src/app/view/home/main/main.component.html
@@ -6,6 +6,7 @@
             <th scope="col">#</th>
             <th scope="col">Name</th>
             <th scope="col">Age</th>
+            <th scope="col">User Name</th>
             <th scope="col">Nationality</th>
             <th scope="col">Phone</th>
           </tr>
